updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Giancarlo Torres, I'm currently employed at Houston Methodist Hospital as an emergency technician but plan on becoming a Software engineer as soon as possible! Im very excited to embark on this journey! </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Houston Texas, born in Galveston Texas.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbie is definitely bodybuiding/weightlifting and I enjoy playing sports with friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to eventually work with A.I.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently living in La Porte, Tx.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love coding and plan on expanding my skill to different careers.</p>
     </section>
 
     <footer id="footer">
